# neural

./: .gitignore  README.md  example.pgm  flake.nix  justfile  meson.build
.github/workflows/: ci.yaml
scripts/: .envrc  generate_test.py
src/: array.c  lib.c  main.c  test.c  test_backprop.c
